Fix banner svg and some colors

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -8,7 +8,7 @@ $border-dark: darken($body-bg-dark, 2.5%);
 $body-color-dark: $gray-300;
 $dots-dark: darken($body-color-dark, 50%);
 
-$link-color-dark: #00d5d5;
+$link-color-dark: #fa40fa;
 $button-color-dark: $link-color-dark;
 $focus-color-dark: lighten($link-color-dark, 2.5%);
 $selection-color-dark: lighten($link-color-dark, 2.5%);
