--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -18,7 +18,7 @@ $beige:    #fbf7f0;
 $red:      #ff2a2a;
 $purple:   #5d2f86;
 $brown:    #aa9c84;
-$green: #008000;
+$green: #00be00;
 
 $blue-300: #8ed6fb;
 $pink-500: #d32e9d;
