Added code syntax highlighting

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -24,3 +24,7 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/sidebar";
+
+/* Import Chroma */
+@import "components/code-light";
+@import "components/code-dark";
