Fixed typos in error messages

--- a/layouts/shortcodes/replit-out.html
+++ b/layouts/shortcodes/replit-out.html
@@ -20,7 +20,7 @@
   {{ warnf "[replit-out shortcode] Did you forget to prefix the author name with '@'?" }}
 {{ end }}
 {{ if eq $name "" }}
-  {{ errorf "[replit-out shorcode] missing required argument 'name' (or positial argument 0)."}}
+  {{ errorf "[replit-out shortcode] missing required argument 'name' (or positional argument 0)."}}
 {{ end }}
 
 <!-- Style Variables -->
