--- a/layouts/shortcodes/replit.html
+++ b/layouts/shortcodes/replit.html
@@ -24,7 +24,7 @@
   {{ warnf "[replit shortcode] Did you forget to prefix the author name with '@'?" }}
 {{ end }}
 {{ if eq $name "" }}
-  {{ errorf "[replit shorcode] Missing required argument 'name' (or positional argument 0)." }}
+  {{ errorf "[replit shortcode] Missing required argument 'name' (or positional argument 0)." }}
 {{ end }}
 
 <!-- Style Variables -->
