Added: table styles

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -50,6 +50,7 @@ img {
   max-width: 100%;
 }
 
+/* styles for numered code blocks?
 table td {
   border: 1px solid #000;
 }
@@ -57,4 +58,4 @@ table td {
 td code {
   background-color: inherit;
   color: #999;
-}
+}*/
