Added CSES standings

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -28,3 +28,6 @@
 /* Import Chroma */
 @import "components/code-light";
 @import "components/code-dark";
+
+/* CSES Styles */
+@import "components/cses-standings"
