--- a/layouts/partials/footer/script-footer.html
+++ b/layouts/partials/footer/script-footer.html
@@ -17,4 +17,7 @@
   <script src="{{ $jsProd.Permalink }}" integrity="{{ $jsProd.Data.Integrity }}" crossorigin="anonymous" defer></script>
   <script src="{{ $indexProd.Permalink }}" integrity="{{ $indexProd.Data.Integrity }}" crossorigin="anonymous" defer></script>
 {{ end -}}
+{{ if eq .Page.Type "csesStandings" -}}
+  {{ partial "footer/cses-script.html" . -}}
+{{ end -}}
 {{ partial "mathjax.html" . }}
