Now tables dark mode is in pure CSS

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -29,5 +29,8 @@
 @import "components/code-light";
 @import "components/code-dark";
 
+/* Tables */
+@import "components/tables";
+
 /* CSES Styles */
-@import "components/cses-standings"
+@import "components/cses-standings";
