CSES standings now uses Font Awesome icons

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,6 +7,9 @@
 /** Import Bootstrap */
 @import "bootstrap/scss/bootstrap";
 
+/** Import FontAwesome */
+@import "@fortawesome/fontawesome-free/scss/solid";
+
 /** Import theme styles */
 @import "common/fonts";
 @import "common/global";
