Fix CSS, images had no margin on the bottom

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -207,3 +207,8 @@ body {
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
+
+img {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
