--- a/assets/scss/components/_images.scss
+++ b/assets/scss/components/_images.scss
@@ -46,3 +46,9 @@ figure.wide .figure-caption {
   margin-top: 0.375rem;
   margin-bottom: 1.25rem;
 }
+
+/*! purgecss start ignore */
+body.dark img.invertible{
+  filter: invert(89%);
+}
+/*! purgecss end ignore */
