--- a/layouts/partials/sidebar/recursos-menu.html
+++ b/layouts/partials/sidebar/recursos-menu.html
@@ -1,10 +1,10 @@
 {{ $currentPage := . -}}
-{{ range .Site.Menus.writeups -}}
+{{ range .Site.Menus.recursos -}}
   <h3>{{ .Name }}</h3>
   {{ if .HasChildren -}}
   <ul class="list-unstyled">
     {{ range .Children -}}
-      {{- $active := or ($currentPage.IsMenuCurrent "writeups" .) ($currentPage.HasMenuCurrent "writeups" .) -}}
+      {{- $active := or ($currentPage.IsMenuCurrent "recursos" .) ($currentPage.HasMenuCurrent "recursos" .) -}}
       {{- $active = or $active (eq .Name $currentPage.Title) -}}
       <li><a class="docs-link{{ if $active }} active{{ end }}" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
     {{ end -}}
