--- a/layouts/recursos/single.html
+++ b/layouts/recursos/single.html
@@ -2,12 +2,12 @@
 	<div class="row flex-xl-nowrap">
 		<div class="col-lg-5 col-xl-4 docs-sidebar">
 			<nav class="docs-links" aria-label="Main navigation">
-				{{ partial "sidebar/writeups-menu.html" . }}
+				{{ partial "sidebar/recursos-menu.html" . }}
 			</nav>
 		</div>
 		{{ if ne .Params.toc false -}}
 		<nav class="docs-toc d-none d-xl-block col-xl-3" aria-label="Secondary navigation">
-			{{ partial "sidebar/writeups-toc.html" . }}
+			{{ partial "sidebar/docs-toc.html" . }}
 		</nav>
 		{{ end -}}
 		{{ if .Params.toc -}}
