Add details shorthand and make changes in binarysearch.md

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -13,9 +13,9 @@ $button-color-dark: $link-color-dark;
 $focus-color-dark: lighten($link-color-dark, 2.5%);
 $selection-color-dark: lighten($link-color-dark, 2.5%);
 
-$navbar-dark-color:                 $body-color-dark;
-$navbar-dark-hover-color:           $link-color-dark;
-$navbar-dark-active-color:          $link-color-dark;
+$navbar-dark-color: $body-color-dark;
+$navbar-dark-hover-color: $link-color-dark;
+$navbar-dark-active-color: $link-color-dark;
 
 /** Theme styles */
 
@@ -290,4 +290,12 @@ body.dark .alert-primary {
 
 body.dark .figure-caption {
   color: $body-color-dark;
+}
+
+body.dark details {
+  border-color: $gray-800;
+}
+
+body.dark summary {
+  background-color: $black;
 }
