--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -84,6 +84,7 @@ $font-size-xl:                $font-size-base * 1.375;
 $font-size-lg:                $font-size-base * 1.25;
 $font-size-md:                $font-size-base * 1.125;
 $font-size-sm:                $font-size-base * 0.875;
+$font-size-code:               $font-size-base * 0.8;
 
 $line-height-base:            1.5;
 
