--- a/assets/scss/components/_code.scss
+++ b/assets/scss/components/_code.scss
@@ -3,7 +3,7 @@ code,
 kbd,
 samp {
   font-family: $font-family-monospace;
-  font-size: $font-size-sm;
+  font-size: $font-size-code;
   border-radius: $border-radius;
 }
 
