Add missing bracket

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -305,6 +305,7 @@ details > p:first-of-type {
 details .chroma {
   margin-top: 0px;
   margin-bottom: 0px;
+}
 
 .katex {
   font-size: $font-size-md;
