--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -12,7 +12,7 @@
   <nav class="container-{{ if .Site.Params.options.fullWidth }}fluid{{ else }}xxl{{ end }} flex-wrap flex-lg-nowrap" aria-label="Main navigation">
 
     <a class="navbar-brand order-0" href="{{ "/" | relLangURL }}" aria-label="{{ .Site.Params.Title }}">
-      {{ .Site.Params.Title }}
+      <img class="invertible" src="{{ .Site.BaseURL | absURL }}{{ .Site.Params.Logo }}"/>
     </a>
 
     {{ if (in .Site.Params.sections.sectionNav .Section) -}}
