--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -14,6 +14,10 @@
   font-weight: $headings-font-weight;
 }
 
+.navbar-brand img {
+  height: 50px;
+}
+
 /*
 .navbar-light .navbar-brand,
 .navbar-light .navbar-brand:hover,
