--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -16,7 +16,7 @@ $yellow:   #ffe000;
 $black:    #1d2d35;
 $beige:    #fbf7f0;
 
-$red:      #ff2a2a;
+// $red:      #ff2a2a;
 $purple:   #5d2f86;
 $brown:    #aa9c84;
 
