Update old dark theme selector

--- a/assets/scss/components/code-dark.scss
+++ b/assets/scss/components/code-dark.scss
@@ -1,6 +1,6 @@
 // Chroma 'dracula' style (modified)
 
-body.dark {
+[data-dark-mode] {
 /* Background */ .chroma { color: #f8f8ff; }
 /* Other */ .chroma .x {  }
 /* Error */ .chroma .err {  }
