Add header title to cses problem set

--- a/layouts/csesStandings/single.html
+++ b/layouts/csesStandings/single.html
@@ -24,6 +24,7 @@
         </tr>
       </tbody>
     </table>
+    <h2>Problem set</h2>
     <table class="table table-sm table-bordered cses-table">
       <tbody>
         {{ range $title := $titles }}
