--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "apunte/prologo/intro/" | absURL }}" role="button">Leer apunte</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ "apunte/prologo/introduccion/" | absURL }}" role="button">Leer apunte</a>
     </div>
   </div>
 </section>
