--- a/layouts/partials/main/docs-navigation.html
+++ b/layouts/partials/main/docs-navigation.html
@@ -1,24 +1,28 @@
-{{ if or .Prev .Next -}}
-	<div class="docs-navigation d-flex justify-content-between">
-	<!-- https://www.feliciano.tech/blog/custom-sort-hugo-single-pages/ -->
-	{{ $pages := where site.RegularPages "Section" .Section -}}
-	{{ with $pages.Next . -}}
-		<a href="{{ .RelPermalink }}">
-			<div class="card my-1">
-				<div class="card-body py-2">
-					&larr; {{ .Title }}
-				</div>
+{{ $siblings := .Parent.Pages }}
+{{ $cur := . }}
+{{ $index_of := 0 }}
+{{ range $idx, $page := $siblings }}
+	{{ if eq $page $cur }}
+		{{ $index_of = $idx }}
+	{{ end }}
+{{ end }}
+<div class="docs-navigation d-flex justify-content-between">
+{{ with (index $siblings (sub $index_of 1)) -}}
+	<a href="{{ .RelPermalink }}">
+		<div class="card my-1">
+			<div class="card-body py-2">
+				&larr; {{ .Title }}
 			</div>
-		</a>
-	{{ end -}}
-	{{ with $pages.Prev . -}}
-		<a class="ms-auto" href="{{ .RelPermalink }}">
-			<div class="card my-1">
-				<div class="card-body py-2">
-					{{ .Title }} &rarr;
-				</div>
-			</div>
-		</a>
-	{{ end -}}
-	</div>
+		</div>
+	</a>
 {{ end -}}
+{{ with (index $siblings (add $index_of 1)) -}}
+	<a class="ms-auto" href="{{ .RelPermalink }}">
+		<div class="card my-1">
+			<div class="card-body py-2">
+				{{ .Title }} &rarr;
+			</div>
+		</div>
+	</a>
+{{ end -}}
+</div>
