--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -112,7 +112,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: auto;
 }
 
 main {
