--- a/layouts/gym/single.html
+++ b/layouts/gym/single.html
@@ -1,9 +1,17 @@
-{{ define "main" }}
+{{ define "main" }} 
 <div class="container-fluid row justify-content-center text-center">
   <h1>{{ .Title }}</h1>
   {{ $titles := .Site.Params.trainingNames }}
   
   {{ $uchilePeople := .Site.Params.uchilePeople }}
+
+  <!-- List of Contents -->
+  {{ $contents := slice
+    (slice "Búsqueda Binaria" "Dos Punteros")
+    (slice "BFS" "DFS" "Dijkstra" "DSU")
+    (slice "Programación Dinámica")
+    (slice "Priority Queue" "Segment Tree (normal)")
+  }}
 
   <div id="gym-tables-container">
     <!-- Tab Navigation -->
@@ -33,6 +41,16 @@
         id="tab-content-{{ $index }}" 
         role="tabpanel" 
         aria-labelledby="tab-{{ $index }}">
+        
+        <!-- Display Contents -->
+        <h3>Contenidos</h3>
+          {{ range (index $contents $index) }}
+          <span>
+          {{ . }}
+          </span><br/>
+          {{ end }}
+
+        <!-- Display Table -->
         <div style="overflow-x: auto;">
           <table class="table table-sm table-bordered cses-table" style="table-layout: auto; width: 100%;">
             <thead>
