--- a/layouts/fullRatings/single.html
+++ b/layouts/fullRatings/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container-fluid row justify-content-center text-center">
   <h1>{{ .Title }}</h1>
-
+  <button id="toggle-icpc" class="btn btn-primary">Mostrar a todos los activos</button>
   {{ $uchilePeople := .Site.Params.uchilePeople }}
 
   <div class="ratings-container" id="standings-tables-container">
@@ -13,43 +13,53 @@
         </tr>
         {{ range $uchilePerson := sort .Site.Params.uchilePeople "codeforcesRating" "desc" }}
         {{ $icpc_allowed := $uchilePerson.icpc}}
-        {{ if $icpc_allowed}}
-        <tr>
+        <tr {{ if not $icpc_allowed }} class="hidden-icpc" style="display: none;" {{ end }}>
           {{ $rating := $uchilePerson.codeforcesRating }}
           {{ $nickname := $uchilePerson.nickname }}
-          {{ if lt $rating 800 }}
-            <td><span class="rating-black">{{ $nickname}}</span></td>
-            <td><span class="rating-black">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 800) (le $rating 1199) }}
-            <td><span class="rating-gray">{{ $nickname}}</span></td>
-            <td><span class="rating-gray">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1200) (le $rating 1399) }}
-            <td><span class="rating-green">{{ $nickname}}</span></td>
-            <td><span class="rating-green">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1400) (le $rating 1599) }}
-            <td><span class="rating-cyan">{{ $nickname}}</span></td>
-            <td><span class="rating-cyan">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1600) (le $rating 1899) }}
-          <td><span class="rating-blue">{{ $nickname}}</span></td>
-          <td><span class="rating-blue">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1900) (le $rating 2099) }}
-          <td><span class="rating-purple">{{ $nickname}}</span></td>
-          <td><span class="rating-purple">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 2100) (le $rating 2399) }}
-          <td><span class="rating-orange">{{ $nickname}}</span></td>
-          <td><span class="rating-orange">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 2400) (le $rating 2999) }}
-          <td><span class="rating-red">{{ $nickname}}</span></td>
-          <td><span class="rating-red">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 3000) (le $rating 3999) }}
-            <td><span class="rating-3000"><span class="rating-black">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-            <td><span class="rating-3000"><span class="rating-black">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-          {{ else if ge $rating 4000 }}
-            <td><span class="rating-4000"><span class="rating-red">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-            <td><span class="rating-4000"><span class="rating-red">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-          {{ end }}
+          <td><span 
+            {{ if lt $rating 800 }}
+              class="rating-black"
+            {{ else if and (ge $rating 800) (le $rating 1199) }}
+              class="rating-gray"
+            {{ else if and (ge $rating 1200) (le $rating 1399) }}
+              class="rating-green"
+            {{ else if and (ge $rating 1400) (le $rating 1599) }}
+              class="rating-cyan"
+            {{ else if and (ge $rating 1600) (le $rating 1899) }}
+              class="rating-blue"
+            {{ else if and (ge $rating 1900) (le $rating 2099) }}
+              class="rating-purple"
+            {{ else if and (ge $rating 2100) (le $rating 2399) }}
+              class="rating-orange"
+            {{ else if and (ge $rating 2400) (le $rating 2999) }}
+              class="rating-red"
+            {{ end }}
+            >
+            {{ $nickname}}
+          </span>{{ if not $icpc_allowed }} * {{ end }}</td>
+          <td><span 
+            {{ if lt $rating 800 }}
+              class="rating-black"
+            {{ else if and (ge $rating 800) (le $rating 1199) }}
+              class="rating-gray"
+            {{ else if and (ge $rating 1200) (le $rating 1399) }}
+              class="rating-green"
+            {{ else if and (ge $rating 1400) (le $rating 1599) }}
+              class="rating-cyan"
+            {{ else if and (ge $rating 1600) (le $rating 1899) }}
+              class="rating-blue"
+            {{ else if and (ge $rating 1900) (le $rating 2099) }}
+              class="rating-purple"
+            {{ else if and (ge $rating 2100) (le $rating 2399) }}
+              class="rating-orange"
+            {{ else if and (ge $rating 2400) (le $rating 2999) }}
+              class="rating-red"
+            {{ end }}
+            >
+            {{ $rating}}
+          </span></td>
+
         </tr>
-        {{ end }}
         {{ end }}
       </tbody>
     </table>
@@ -61,46 +71,67 @@
         </tr>
         {{ range $uchilePerson := sort .Site.Params.uchilePeople "atcoderRating" "desc" }}
         {{ $icpc_allowed := $uchilePerson.icpc}}
-        {{ if $icpc_allowed}}
-        <tr>
+        <tr {{ if not $icpc_allowed }} class="hidden-icpc" style="display: none;" {{ end }}>
           {{ $rating := $uchilePerson.atcoderRating }}
           {{ $nickname := $uchilePerson.nickname }}
-          {{ if lt $rating 200 }}
-            <td><span class="rating-black">{{ $nickname}}</span></td>
-            <td><span class="rating-black">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 200) (le $rating 399) }}
-            <td><span class="rating-gray">{{ $nickname}}</span></td>
-            <td><span class="rating-gray">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 400) (le $rating 799) }}
-            <td><span class="rating-green">{{ $nickname}}</span></td>
-            <td><span class="rating-green">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 800) (le $rating 1299) }}
-            <td><span class="rating-cyan">{{ $nickname}}</span></td>
-            <td><span class="rating-cyan">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1300) (le $rating 1699) }}
-          <td><span class="rating-blue">{{ $nickname}}</span></td>
-          <td><span class="rating-blue">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 1700) (le $rating 1999) }}
-          <td><span class="rating-purple">{{ $nickname}}</span></td>
-          <td><span class="rating-purple">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 2000) (le $rating 2299) }}
-          <td><span class="rating-orange">{{ $nickname}}</span></td>
-          <td><span class="rating-orange">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 2300) (le $rating 2999) }}
-          <td><span class="rating-red">{{ $nickname}}</span></td>
-          <td><span class="rating-red">{{ $rating}}</span></td>
-          {{ else if and (ge $rating 3000) (le $rating 3999) }}
-            <td><span class="rating-3000"><span class="rating-black">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-            <td><span class="rating-3000"><span class="rating-black">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-          {{ else if ge $rating 4000 }}
-            <td><span class="rating-4000"><span class="rating-red">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-            <td><span class="rating-4000"><span class="rating-red">{{ printf "%.1s" $rating }}</span>{{ printf "%.s" $rating 1 }}</span></td>
-          {{ end }}
+          <td><span 
+            {{ if lt $rating 200 }}
+              class="rating-black"
+            {{ else if and (ge $rating 200) (le $rating 399) }}
+              class="rating-gray"
+            {{ else if and (ge $rating 400) (le $rating 899) }}
+              class="rating-green"
+            {{ else if and (ge $rating 900) (le $rating 1399) }}
+              class="rating-cyan"
+            {{ else if and (ge $rating 1400) (le $rating 1699) }}
+              class="rating-blue"
+            {{ else if and (ge $rating 1700) (le $rating 1999) }}
+              class="rating-purple"
+            {{ else if and (ge $rating 2000) (le $rating 2399) }}
+              class="rating-orange"
+            {{ else if and (ge $rating 2400) (le $rating 2999) }}
+              class="rating-red"
+            {{ end }}
+            >
+            {{ $nickname}}
+          </span>{{ if not $icpc_allowed }} * {{ end }}</td>
+          <td><span 
+            {{ if lt $rating 200 }}
+              class="rating-black"
+            {{ else if and (ge $rating 200) (le $rating 399) }}
+              class="rating-gray"
+            {{ else if and (ge $rating 400) (le $rating 899) }}
+              class="rating-green"
+            {{ else if and (ge $rating 900) (le $rating 1399) }}
+              class="rating-cyan"
+            {{ else if and (ge $rating 1400) (le $rating 1699) }}
+              class="rating-blue"
+            {{ else if and (ge $rating 1700) (le $rating 1999) }}
+              class="rating-purple"
+            {{ else if and (ge $rating 2000) (le $rating 2399) }}
+              class="rating-orange"
+            {{ else if and (ge $rating 2400) (le $rating 2999) }}
+              class="rating-red"
+            {{ end }}
+            >
+            {{ $rating}}
+          </span></td>
         </tr>
-        {{ end }}
         {{ end }}
       </tbody>
     </table>
   </div>  
 </div>
+<script>
+  document.getElementById("toggle-icpc").addEventListener("click", function() {
+    let hiddenRows = document.querySelectorAll(".hidden-icpc");
+    let isHidden = hiddenRows.length > 0 && hiddenRows[0].style.display === "none";
+
+    hiddenRows.forEach(row => {
+      row.style.display = isHidden ? "table-row" : "none";
+    });
+
+    this.textContent = isHidden ? "Esconder a los ICPC - no elegibles" : "Mostrar a todos los activos";
+  });
+</script>
 {{ end }}
