--- a/layouts/fullRatings/single.html
+++ b/layouts/fullRatings/single.html
@@ -13,6 +13,7 @@
         </tr>
         {{ range $uchilePerson := sort .Site.Params.uchilePeople "codeforcesRating" "desc" }}
         {{ $icpc_allowed := $uchilePerson.icpc}}
+        {{ if $uchilePerson.active }}
         <tr {{ if not $icpc_allowed }} class="hidden-icpc" style="display: none;" {{ end }}>
           {{ $rating := $uchilePerson.codeforcesRating }}
           {{ $nickname := $uchilePerson.nickname }}
@@ -61,6 +62,7 @@
 
         </tr>
         {{ end }}
+        {{ end }}
       </tbody>
     </table>
     <table class="table table-sm table-bordered codeforces-table" id="atcoder-standings">
@@ -71,6 +73,7 @@
         </tr>
         {{ range $uchilePerson := sort .Site.Params.uchilePeople "atcoderRating" "desc" }}
         {{ $icpc_allowed := $uchilePerson.icpc}}
+        {{ if $uchilePerson.active }}
         <tr {{ if not $icpc_allowed }} class="hidden-icpc" style="display: none;" {{ end }}>
           {{ $rating := $uchilePerson.atcoderRating }}
           {{ $nickname := $uchilePerson.nickname }}
@@ -117,6 +120,7 @@
             {{ $rating}}
           </span></td>
         </tr>
+        {{ end }}
         {{ end }}
       </tbody>
     </table>
