--- a/layouts/gym/single.html
+++ b/layouts/gym/single.html
@@ -1,95 +1,15 @@
 {{ define "main" }} 
 <div class="container-fluid row justify-content-center text-center">
-  <h1>{{ .Title }}</h1>
-  {{ $titles := .Site.Params.trainingNames }}
+  <div class="container-fluid row justify-content-center text-center">
+    <h1>{{ .Title }}</h1>
+    <div id="gym-tables-container">
+      <!-- Tab Navigation (Initially Empty) -->
+      <ul class="nav nav-tabs" id="gym-tabs" role="tablist"></ul>
   
-  {{ $uchilePeople := .Site.Params.uchilePeople }}
-
-  <!-- List of Contents -->
-  {{ $contents := slice
-    (slice "Búsqueda Binaria" "Dos Punteros")
-    (slice "BFS" "DFS" "Dijkstra" "DSU")
-    (slice "Programación Dinámica")
-    (slice "Priority Queue" "Segment Tree (normal)")
-  }}
-
-  <div id="gym-tables-container">
-    <!-- Tab Navigation -->
-    <ul class="nav nav-tabs" id="gym-tabs" role="tablist">
-      {{ range $index, $title := $titles }}
-      <li class="nav-item" role="presentation">
-        <button 
-          class="nav-link {{ if eq $index 0 }}active{{ end }}" 
-          id="tab-{{ $index }}" 
-          data-bs-toggle="tab" 
-          data-bs-target="#tab-content-{{ $index }}" 
-          type="button" 
-          role="tab" 
-          aria-controls="tab-content-{{ $index }}" 
-          aria-selected="{{ if eq $index 0 }}true{{ else }}false{{ end }}">
-          {{ $title }}
-        </button>
-      </li>
-      {{ end }}
-    </ul>
-
-    <!-- Tab Content -->
-    <div class="tab-content" id="gym-tab-content">
-      {{ range $index, $title := $titles }}
-      <div 
-        class="tab-pane fade {{ if eq $index 0 }}show active{{ end }}" 
-        id="tab-content-{{ $index }}" 
-        role="tabpanel" 
-        aria-labelledby="tab-{{ $index }}">
-        
-        <!-- Display Contents -->
-        <h3>Contenidos</h3>
-          {{ range (index $contents $index) }}
-          <span>
-          {{ . }}
-          </span><br/>
-          {{ end }}
-
-        <!-- Display Table -->
-        <div style="overflow-x: auto;">
-          <table class="table table-sm table-bordered cses-table" style="table-layout: auto; width: 100%;">
-            <thead>
-              <tr>
-                <th style="position: sticky; left: 0; background-color: #f8f9fa; z-index: 1;"></th>
-                {{ range $uchilePerson := $uchilePeople }}
-                {{ $nickname := $uchilePerson.nickname}}
-                {{ $crating := $uchilePerson.codeforcesRating}}
-                {{ $arating := $uchilePerson.atcoderRating}}
-                  {{ $icpc_allowed := $uchilePerson.icpc}}
-                  {{ if $icpc_allowed}}
-                    {{ if and (lt $crating 800) (lt $arating 200) }}
-                      <td><span class="rating-black">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 1199) (le $arating 399) }}
-                      <td><span class="rating-gray">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 1399) (le $arating 799) }}
-                      <td><span class="rating-green">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 1599) (le $arating 1299) }}
-                      <td><span class="rating-cyan">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 1899) (le $arating 1699) }}
-                    <td><span class="rating-blue">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 2099) (le $arating 1999) }}
-                    <td><span class="rating-purple">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 2399) (le $arating 2299) }}
-                    <td><span class="rating-orange">{{ $nickname}}</span></td>
-                    {{ else if and (le $crating 2999) (le $arating 2999)}}
-                    <td><span class="rating-red">{{ $nickname}}</span></td>
-                    {{ end }}
-                  {{ end }}
-                {{ end }}
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      {{ end }}
+      <!-- Tab Content (Initially Empty) -->
+      <div class="tab-content" id="gym-tab-content"></div>
+      <div id="loading">Loading data...</div>
     </div>
-  </div>  
+  </div>
 </div>
 {{ end }}
