--- a/layouts/gym/single.html
+++ b/layouts/gym/single.html
@@ -1,4 +1,12 @@
 {{ define "main" }} 
+<style>
+.tab-pane {
+  display: none;
+}
+.tab-pane.show {
+  display: block;
+}
+</style>
 <div class="container-fluid row justify-content-center text-center">
   <div class="container-fluid row justify-content-center text-center">
     <h1>{{ .Title }}</h1>
