experienca de equipo

--- a/layouts/brasilcamp/single.html
+++ b/layouts/brasilcamp/single.html
@@ -28,32 +28,35 @@
         <div style="display: flex; gap: 20px;">
             <div style="flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 10px;">
                 <h3>Diego Arias (<strong>dariasc</strong>)</h3>
-                <p><strong>Carrete:</strong> <br></p>
-                <p><strong>Comida:</strong> <br></p>
-                <p><strong>Comunidad:</strong> <br></p>
-                <p><strong>Dificultad:</strong> <br></p>
-                <p><strong>Calidad de problemas:</strong> <br></p>
-                <p><strong>Clases:</strong> <br></p>
+                <p><strong>Carrete:</strong> Que grande postihno. <br></p>
+                <p><strong>Comida:</strong> Un poco repetitiva pero buena. Aparte es gratis :) <br></p>
+                <p><strong>Comunidad:</strong> Gente demasiado bacán con mucha motivación. Faltó aprender portugués. <br></p>
+                <p><strong>Dificultad:</strong> Demasiado competitivo, siempre había algo que upsolvear en las tardes. <br></p>
+                <p><strong>Calidad de problemas:</strong> Hubieron un par de contests que tuvieron cueva de dificultad tipo Regional 2024 😰, pero fuera de eso muy buena mezcla de problemas. Aparte no habian problemas que ya habíamos visto como sucedía en argentina. <br></p>
+                <p><strong>Clases:</strong> Los profes se notaban que cachaban muchísimo, pero a veces sus clases o iban muy rapido (primera semana) o muy lento (segunda semana). También encuentro que la selección de materia que pasaron no fue la mejor (demasiado específica / muy avanzada). <br></p>
+                <p><strong>Lo recomiendas?:</strong> Creo que rating de codeforces no aplica mucho a problemas tipo Regional ICPC, creo que importa más la materia vs haber resuelto problemas tipo codeforces. Por eso pongo 1600 más que nada por la experiencia que implica.</p>
             </div>
             
             <div style="flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 10px;">
                 <h3>Vicente Villarroel (<strong>vivivi</strong>)</h3>
-                <p><strong>Carrete:</strong> <br></p>
-                <p><strong>Comida:</strong> <br></p>
-                <p><strong>Comunidad:</strong> <br></p>
-                <p><strong>Dificultad:</strong> <br></p>
-                <p><strong>Calidad de problemas:</strong> <br></p>
-                <p><strong>Clases:</strong> <br></p>
+                <p><strong>Carrete:</strong> El ambiente es bien distinto a los carretes chilenos y las personas son interesantes y cálidas.<br></p>
+                <p><strong>Comida:</strong> Sé qué no es una opinión muy popular, pero comimos todos los días prácticamente lo mismo y disfruté eso, también era gratis. Para quienes no les gusta eso, había otro casino pagado que ofrecía harta mas variedad.<br></p>
+                <p><strong>Comunidad:</strong> Como dije anteriormente, son personas cálidas e interesantes, y fue un gusto conocerlos :)<br></p>
+                <p><strong>Dificultad:</strong> Ver puntos anteriores.<br></p>
+                <p><strong>Calidad de problemas:</strong> Los problemas eran muy interesantes. Me gustó mucho que estaban en el nivel en el que abstraen detalles de la implementación como el utilizar segment trees. En otras palabras, los problemas esperaban que dominaras todas las herramientas que conoces y supieras utilizarlas en conjunto. Lo único que no me gustó es que los límites de tiempo a veces eran muy ajustados y se desperdiciaba mucho tiempo intentando reducir una constante, cuando esa parte no suele ser muy interesante.<br></p>
+                <p><strong>Clases:</strong> Los temas fueron bien interesantes y útiles. Daban buenos consejos. La primera semana, el profesor iba muy rápido y la materia principalmente se veía en ejemplos de problemas. La segunda semana, el profesor era un mucho mejor orador pero los temas eran muy básicos. Por ejemplo, pasamos dos clases viendo matching y flujo a un nivel introductorio, y el resto de clases eran principalmente repasos sobre lo que vio el profesor anterior.<br></p>
+                <p><strong>Lo recomiendas?:</strong> En realidad creo que no depende tanto del rating sino que depende más de tu familiaridad con los contenidos de base, y con tu capacidad de abstracción y de interiorizar conceptos rápido. Perfectamente lo recomendaría a alguien con un rating de 1400 que cumpla con esto, pero también hay gente con rating de 1900 que no la va a pasar tan bien.</p>
             </div>
 
             <div style="flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 10px;">
                 <h3>Gabriel Carmona (<strong>m1tu</strong>)</h3>
-                <p><strong>Carrete:</strong> <br></p>
-                <p><strong>Comida:</strong> <br></p>
-                <p><strong>Comunidad:</strong> <br></p>
-                <p><strong>Dificultad:</strong> <br></p>
-                <p><strong>Calidad de problemas:</strong> <br></p>
-                <p><strong>Clases:</strong> <br></p>
+                <p><strong>Carrete:</strong> carretear en una bencinera fue tremenda experiencia.<br></p>
+                <p><strong>Comida:</strong> no era mala pero sí me aburrí en algún momento de comer arroz con porotos. si consideramos la comida brasileña en general, 10/10. el açaí se la lleva por lejos, ir a açaíland y usar el código de descuento MITULA<br></p>
+                <p><strong>Comunidad:</strong> nada q decir. todos son demasiado apañadores y cute y es cuando te das cuenta que los top 1 son weones como uno no más,,,,<br></p>
+                <p><strong>Dificultad:</strong> eran buenos problemas dentro de todo q no eran tan "estándar" y en general de buena calidad. las veces q dije "problema de mierda" creo q siempre fueron por un TL muy ajustado.<br></p>
+                <p><strong>Calidad de problemas:</strong> ver punto anterior<br></p>
+                <p><strong>Clases:</strong> depende del primer pie que haya puesto el profe en el piso en la mañana, aunque la vd se aprende harto y no me quejo. ojo sí que hubo varios problemas con técnicas no tan triviales como funciones generatrices, dynamic connectivity, lagrangian relaxation, etc y a veces se ponían chistosos con los límites.<br></p>
+                <p><strong>Lo recomiendas?:</strong> -</p>
             </div>
         </div>
     </section>
